// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notifications integration testing should create a notification if the creator and the notifier are different users ( commenting ) 1`] = `
Object {
  "data": Object {
    "getNotifications": Array [
      Object {
        "action": "has commented on your post",
        "actionId": Object {
          "body": "example post",
        },
        "creator": Object {
          "avatarImage": "https://scontent.fsof4-1.fna.fbcdn.net/v/t1.30497-1/c71.0.240.240a/p240x240/84241059_189132118950875_4138507100605120512_n.jpg?_nc_cat=1&_nc_sid=7206a8&_nc_ohc=CD3ImewvDlgAX8f-QvY&_nc_ht=scontent.fsof4-1.fna&oh=782172992e9272da49f35f7f40ef8d63&oe=5EED0201",
          "firstName": "Brady",
          "lastName": "Yost",
        },
        "notifier": Object {
          "avatarImage": "https://scontent.fsof4-1.fna.fbcdn.net/v/t1.30497-1/c71.0.240.240a/p240x240/84241059_189132118950875_4138507100605120512_n.jpg?_nc_cat=1&_nc_sid=7206a8&_nc_ohc=CD3ImewvDlgAX8f-QvY&_nc_ht=scontent.fsof4-1.fna&oh=782172992e9272da49f35f7f40ef8d63&oe=5EED0201",
          "firstName": "Devon",
          "lastName": "Orn",
        },
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Notifications integration testing should create a notification if the creator and the notifier are different users ( liking ) 1`] = `
Object {
  "data": Object {
    "getNotifications": Array [
      Object {
        "action": "has liked your post",
        "actionId": Object {
          "body": "example post",
        },
        "creator": Object {
          "avatarImage": "https://scontent.fsof4-1.fna.fbcdn.net/v/t1.30497-1/c71.0.240.240a/p240x240/84241059_189132118950875_4138507100605120512_n.jpg?_nc_cat=1&_nc_sid=7206a8&_nc_ohc=CD3ImewvDlgAX8f-QvY&_nc_ht=scontent.fsof4-1.fna&oh=782172992e9272da49f35f7f40ef8d63&oe=5EED0201",
          "firstName": "Brady",
          "lastName": "Yost",
        },
        "notifier": Object {
          "avatarImage": "https://scontent.fsof4-1.fna.fbcdn.net/v/t1.30497-1/c71.0.240.240a/p240x240/84241059_189132118950875_4138507100605120512_n.jpg?_nc_cat=1&_nc_sid=7206a8&_nc_ohc=CD3ImewvDlgAX8f-QvY&_nc_ht=scontent.fsof4-1.fna&oh=782172992e9272da49f35f7f40ef8d63&oe=5EED0201",
          "firstName": "Devon",
          "lastName": "Orn",
        },
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Notifications integration testing should delete a notification if the creator deletes his comment 1`] = `
Object {
  "data": Object {
    "getNotifications": Array [],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Notifications integration testing should delete a notification if the creator unlikes 1`] = `
Object {
  "data": Object {
    "getNotifications": Array [],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Notifications integration testing should not create a notification if the creator and the notifier are the same user ( commenting ) 1`] = `
Object {
  "data": Object {
    "getNotifications": Array [],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Notifications integration testing should not create a notification if the creator and the notifier are the same user ( liking ) 1`] = `
Object {
  "data": Object {
    "getNotifications": Array [],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
